...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/medicalInfoBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#00FFFFFF"
        android:onClick="backHome"
...
                        app:hintTextColor="@color/teal_700"
                        >



                        <AutoCompleteTextView
                            android:id="@+id/medicalInfoGenderDropdown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_gender"
                            android:inputType="none"
                            tools:ignore="LabelFor" />

...
                        android:hint="@string/bloodType"
                        app:boxStrokeColor="@color/persimmon"
                        app:hintTextColor="@color/dark_persimmon">


                        <AutoCompleteTextView
                            android:id="@+id/medicalInfoBloodDropdown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_bloodtype"
                            android:inputType="none"
                            tools:ignore="LabelFor" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/medicalInfoHeightTxtLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/height"
                    app:boxStrokeColor="@color/persimmon"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_error"
                    app:hintTextColor="@color/dark_persimmon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/medicalInfoBirthTxtLayout"
                    app:startIconDrawable="@drawable/ic_measure_height"
                    app:suffixText="cm"
                    >


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/medicalInfoHeightEditTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:maxLength="3" />

                </com.google.android.material.textfield.TextInputLayout>
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/medicalInfoHorizontalLayout"
                    app:startIconDrawable="@drawable/ic_calendar">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/medicalInfoBirthEditTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:maxLength="4" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/medicalInfoWeightTxtLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/weight"
...
                    app:layout_constraintTop_toBottomOf="@+id/medicalInfoHeightTxtLayout"
                    app:startIconDrawable="@drawable/ic_weight"
                    app:suffixText="kg">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/medicalInfoWeightEditTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:maxLength="3" />

                </com.google.android.material.textfield.TextInputLayout>
...

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/medicalInfoContactNumberTxtLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/EmergencyContactNumber"
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/medicalInfoContactNameTxtLayout"
                    app:startIconDrawable="@drawable/number_icon">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/medicalInfoContactNumberEditTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:maxLength="15">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>


                <CheckBox
                    android:id="@+id/medicalInfoPrivacyCheck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="24dp"
                    android:text=""
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/medicalInfoSaveButton"
                    android:buttonTint="@color/yellow_orange"/>


                <Button
                    android:id="@+id/medicalInfoSaveButton"
                    android:layout_width="fill_parent"
...
