...
    </string>
    <string name="medicalCard">My Medical Card</string>
    <string name="YearOfBirth">Year of birth*</string>
    <string name="gender">Gender*</string>
    <string name="height">Height*</string>
    <string name="weight">Weight*</string>
    <string name="yearTooRecent">Invalid year : You can not be born in the future </string>
    <string name="yearTooOld">Invalid year : You seem too old to be alive </string>
    <string name="heightTooShort">Invalid height : You seem too short </string>
    <string name="heightTooBig">Invalid height : You seem too big </string>
    <string name="weightTooLight">Invalid weight : You seem too light </string>
    <string name="weightTooHeavy">Invalid weight : You seem too heavy </string>
    <string name="Condition">Conditions </string>
    <string name="Allergy">Allergy </string>
    <string name="CurrentTreatment">Current Treatment </string>
    <string name="EmergencyContactName">Contact Name</string>
    <string name="EmergencyContactNumber">Phone Number</string>
    <string name="bloodType">Blood type*</string>
...
    <string name="cpr_rate_button">CPR Rate</string>
    <string name="help_button">CPR Help</string>
    <string name="skills_button">Skills</string>
    <string name="cpr_rate_button_start">START</string>
    <string name="cpr_rate_button_stop">STOP</string>
    <string name="save_changes">Save changes</string>
    <string name="changes_saved">Changes saved</string>
    <string name="invalid_field_msg">ERROR : Some fields are not filled correctly</string>
    <string name="invalid_empty_msg">ERROR : Some mandatory fields (*) are left empty</string>
    <string name="username_error_field_msg">ERROR : Please choose a correct username</string>
    <string name="privacy_policy_not_accepted">ERROR : You must accept our privacy policy first</string>

    <!--Preference Key for now should find better way to store this-->

    <string name="my_skills_key">MY_SKILLS_KEY</string>
    <string name="medical_info_key">MEDICAL_INFO_KEY</string>

    <string name="privacy_policy">Privacy policy</string>
    <string name="medical_info_privacy_policy">
        We know how your medical information are important to you and we take care of your privacy. Indeed your medical data is only stored on your phone.\n In case of an emergency only your helper will receive the necessary information so he/she can help you in the best condition. After the intervention, your info will then be deleted from your helper\'s phone and you will again be the only owner

    <string name="pro_profile_privacy_policy">
        We know how your professional information are important to you and we take care of your privacy. Indeed your professional data is only stored on the H3lp database.\n In case of an emergency or if you respond to a post in the forum, your data will be displayed to the other users.</string>

...
